--- a/client/src/app/core/login/containers/login.component.scss
+++ b/client/src/app/core/login/containers/login.component.scss
@@ -5,7 +5,6 @@
   }
 
   .login-img {
-    // min-height: 200px;
     width: 200px;
     display: block;
     margin: auto;
@@ -13,7 +12,6 @@
   }
 }
 
-.details {
-  margin-top: 5px;
-  font-size: 10px;
+.form-check {
+  margin: 20px;
 }
