--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,6 +3,7 @@
 /* Directory file of styles. To see style go to scss/ */
 @import "./scss/_theme";
 @import "./scss/_variables";
+@import "./scss/_layout";
 @import "./scss/_mixins";
 @import "./scss/_reset";
 @import "./scss/_header";
