--- a/client/src/app/core/login/containers/login.component.html
+++ b/client/src/app/core/login/containers/login.component.html
@@ -2,27 +2,30 @@
 
 <form class="form-contact col-lg-6 col-xl-6 offset-xl-1" [formGroup]="loginForm">
   <div class="search-wrapper">
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Introduce email"
-        formControlName="email">
-      <!-- <small id="emailHelp" class="form-text text-muted">No compartiremos tu email con nadie</small> -->
-    </div>
-    <div class="form-group" *ngIf="loginMode">
-      <label for="password">Contraseña</label>
-      <input type="password" class="form-control" id="password" placeholder="Introduce la contraseña"
-        formControlName="password">
-      <details class="details">
-        <small id="passwordHelp" class="form-text text-muted">La contraseña debe contener entre 6 y 20 caracteres, de
-          los cuales 1 minúscula, 1 mayúscula, 1 número y 1 carácter especial</small>
-      </details>
-    </div>
+    <mat-form-field class="full-width" appearance="outline">
+      <mat-label>Email</mat-label>
+      <input type="email" matInput formControlName="email" placeholder="Introduce email">
+      <mat-error *ngIf="loginForm.get('email').hasError('email') && !loginForm.get('email').hasError('required')">
+        El formato de email no es válido
+      </mat-error>
+      <mat-error *ngIf="loginForm.get('email').hasError('required')">
+        El campo Email es <strong>requerido</strong>
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field *ngIf="loginMode" class="full-width" appearance="outline">
+      <mat-label>Contraseña</mat-label>
+      <input type="password" matInput formControlName="password" placeholder="Introduce la contraseñ">
+      <mat-error *ngIf="loginForm.get('password').hasError('required')">
+        El campo Email es <strong>requerido</strong>
+      </mat-error>
+      <mat-hint>La contraseña debe contener entre 6 y 20 caracteres, de los cuales 1 minúscula, 1 mayúscula, 1 número y 1 carácter especial</mat-hint>
+    </mat-form-field>
     <div class="form-check" *ngIf="loginMode">
       <input type="checkbox" class="form-check-input" id="rememberme" formControlName="keepSession">
       <label class="form-check-label" for="rememberme">Recuérdame</label>
     </div>
     <div class="button-block">
-      <button type="submit" class="button border-1 mt-3" [disabled]="!loginForm.valid"
+      <button type="submit" class="button border-1 mt-3" [disabled]="!loginForm.valid" [ngClass]="{'disabled-button': !loginForm.valid}"
         (click)="submit()">Adelante!</button>
       <button type="submit" class="button border-1 mt-3" (click)="goTo('register')">Soy nuevo, quiero empezar!</button>
     </div>
