--- a/client/src/app/public/create-suitcase/components/item-list/item-list.component.html
+++ b/client/src/app/public/create-suitcase/components/item-list/item-list.component.html
@@ -33,7 +33,7 @@
       <span>Bebé</span>
     </div>
   </ng-container>
-  <div *ngFor="let item of itemList | slice:0:5; let i=index" class="common-card-body" [ngSwitch]="item.type">
+  <ng-container *ngFor="let item of itemList | slice:0:5; let i=index" [ngSwitch]="item.type">
     <ng-container *ngSwitchCase="'tech'">
       <div class="card-header card-subsubheader" *ngIf="showSubsubheader('tech', item.name)">
         <mat-icon matSuffix matTooltip="Tecnología" [matTooltipPosition]="'below'">photo_camera</mat-icon>
@@ -73,7 +73,7 @@
       <div class="card-header card-subsubheader" *ngIf="showSubsubheader('others', item.name)">Otros</div>
       <ng-container *ngTemplateOutlet="cardBody; context: { $implicit: item, i:i  };"></ng-container>
     </ng-container>
-  </div>
+  </ng-container>
 </ng-container>
 
 <ng-template #cardBody let-item let-i="i">
