--- a/client/src/app/public/home/containers/home/home.component.html
+++ b/client/src/app/public/home/containers/home/home.component.html
@@ -1,4 +1,5 @@
 <navbar-component></navbar-component>
+
 <ng-container *ngIf="!isLogged; else logged">
   <section class="hero-banner magic-ball">
     <div class="container">
@@ -120,6 +121,7 @@
       </div>
     </div>
   </section>
+
   <section class="section-margin">
     <div class="section-intro text-center pb-90px">
       <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 172 172"
@@ -156,7 +158,6 @@
   </section>
 </ng-container>
 
-
 <ng-template #logged>
   <div id="sections-container">
     <!--================Create new suitcase section Start =================-->
@@ -180,10 +181,11 @@
 
 
     <!--================Overview created suitcases section Start =================-->
-    <section class="section-margin" [@isCreatingSuitcase]="isCreating ? 'hidden' : 'show'" #overview id="mySuitcases">
+    <section class="section-margin" [@showOverview]="showOverview ? 'show' : 'hide'" #overview id="mySuitcases">
       <my-suitcase-overview (dataLoaded)="onOverviewLoaded()"></my-suitcase-overview>
     </section>
     <!--================Overview created suitcases section End =================-->
   </div>
 </ng-template>
+
 <footer-component></footer-component>
