installer button for pwa

--- a/client/src/app/core/shared/navbar/containers/navbar.component.scss
+++ b/client/src/app/core/shared/navbar/containers/navbar.component.scss
@@ -1,3 +1,10 @@
+:host {
+  display: inline-block;
+  width: 100%;
+  min-height: 90px;
+  margin-bottom: 20px;
+}
+
 .logo {
   height: auto;
   width: auto;
