--- a/client/src/app/public/contact/containers/contact.component.html
+++ b/client/src/app/public/contact/containers/contact.component.html
@@ -9,11 +9,9 @@
       <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm"
             novalidate="novalidate">
         <div class="row">
-          <div class="col-12">
-            <div class="form-group">
+          <div class="col-12 form-group">
                   <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
                             placeholder="Enter Message"></textarea>
-            </div>
           </div>
           <div class="col-sm-6">
             <div class="form-group">
