--- a/client/src/app/public/home/containers/home/home.component.html
+++ b/client/src/app/public/home/containers/home/home.component.html
@@ -1,7 +1,5 @@
 <navbar-component></navbar-component>
 
-<web-notification-suscriber></web-notification-suscriber>
-
 <ng-container *ngIf="!isLogged; else logged">
   <section class="hero-banner magic-ball">
     <div class="container">
@@ -18,7 +16,24 @@
     </div>
   </section>
 
-  <section class="section-margin generic-margin">
+  <section class="section-padding notification__container">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-md-6 align-self-center about-content">
+          <h2>Estate a la última activando las notificaciones.</h2>
+          <p>Si quieres conocer todas las novedades y funcionalidades que constantemente se incrementan en <i>mySuitcase</i>,
+             tan solo háznoslo saber activando las notificaciones.</p>
+
+          <web-notification-suscriber></web-notification-suscriber>
+        </div>
+        <div class="col-lg-7 col-md-6 mb-4 mb-md-0 notification__img-container">
+          <img class="img-fluid" src="../../../../../assets/img/notifications/notifications.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-margin generic-margin trip-type__container">
     <div class="container">
       <div class="section-intro text-center pb-90px">
         <!--<img class="section-intro-img" src="../../../../../assets/img/logo/logo.png" alt="">-->
