--- a/client/src/app/core/shared/pwa-installer/pwa-installer.component.html
+++ b/client/src/app/core/shared/pwa-installer/pwa-installer.component.html
@@ -1,1 +1,4 @@
-<button id="install_button" class="button button-hero mt-4" hidden>Install</button>
+<button id="install_button" class="button button-hero mt-4 install-button" hidden>
+    <span>Install </span>
+    <mat-icon aria-hidden="false" aria-label="Discard item">install_desktop</mat-icon>
+</button>
