--- a/client/src/app/public/home/containers/home/home.component.html
+++ b/client/src/app/public/home/containers/home/home.component.html
@@ -16,22 +16,7 @@
     </div>
   </section>
 
-  <section class="section-padding notification__container">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-md-6 align-self-center about-content">
-          <h2>Estate a la última activando las notificaciones.</h2>
-          <p>Si quieres conocer todas las novedades y funcionalidades que constantemente se incrementan en <i>mySuitcase</i>,
-             tan solo háznoslo saber activando las notificaciones.</p>
-
-          <web-notification-suscriber></web-notification-suscriber>
-        </div>
-        <div class="col-lg-7 col-md-6 mb-4 mb-md-0 notification__img-container">
-          <img class="img-fluid" src="../../../../../assets/img/notifications/notifications.jpg" alt="">
-        </div>
-      </div>
-    </div>
-  </section>
+  <ng-container *ngTemplateOutlet="notifications"></ng-container>
 
   <section class="section-margin generic-margin trip-type__container">
     <div class="container">
@@ -121,27 +106,7 @@
     </div>
   </section>
 
-  <section class="bg-gray section-padding pwa-container">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-7 col-md-6 mb-4 mb-md-0">
-          <div class="about-img">
-            <img class="img-fluid" src="../../../../../assets/img/home/undraw_world.svg" alt="">
-          </div>
-        </div>
-        <div class="col-lg-5 col-md-6 align-self-center about-content">
-          <h2>Preocúpate tan solo por el destino.</h2>
-          <p>Con <i>mySuitcase</i> podrás poner el foco en el sitio que vas a visitar. No volverás a olvidarte nada. Te
-            ayudamos a recordar aquelllo que más necesitas para cada uno de tus viajes.</p>
-
-          <div class="pwa-installer__container" hidden >
-            <p>Usala desde cualquier lugar incluso sin conexión! Instala la aplicación para una mayor rapidez y experiencia.</p>
-            <pwa-installer></pwa-installer>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <ng-container *ngTemplateOutlet="pwa"></ng-container>
 
   <section class="section-margin">
     <div class="section-intro text-center pb-90px">
@@ -205,7 +170,59 @@
       <my-suitcase-overview (dataLoaded)="onOverviewLoaded()"></my-suitcase-overview>
     </section>
     <!--================Overview created suitcases section End =================-->
+
+    <!--================Notifications section Start =================-->
+    <ng-container *ngTemplateOutlet="notifications"></ng-container>
+    <!--================Notifications section End =================-->
+
+    <!--================PWA section Start =================-->
+    <ng-container *ngTemplateOutlet="pwa"></ng-container>
+    <!--================PWA section End =================-->
+
   </div>
+</ng-template>
+
+<ng-template #pwa>
+  <section class="bg-gray section-padding pwa-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7 col-md-6 mb-4 mb-md-0">
+          <div class="about-img">
+            <img class="img-fluid" src="../../../../../assets/img/home/undraw_world.svg" alt="">
+          </div>
+        </div>
+        <div class="col-lg-5 col-md-6 align-self-center about-content">
+          <h2>Preocúpate tan solo por el destino.</h2>
+          <p>Con <i>mySuitcase</i> podrás poner el foco en el sitio que vas a visitar. No volverás a olvidarte nada. Te
+            ayudamos a recordar aquelllo que más necesitas para cada uno de tus viajes.</p>
+
+          <div class="pwa-installer__container" hidden >
+            <p>Usala desde cualquier lugar incluso sin conexión! Instala la aplicación para una mayor rapidez y experiencia.</p>
+            <pwa-installer></pwa-installer>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</ng-template>
+
+<ng-template #notifications>
+  <section class="section-padding notification__container">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-md-6 align-self-center about-content">
+          <h2>Estate a la última activando las notificaciones.</h2>
+          <p>Si quieres conocer todas las novedades y funcionalidades que constantemente se incrementan en <i>mySuitcase</i>,
+             tan solo háznoslo saber activando las notificaciones.</p>
+
+          <web-notification-suscriber></web-notification-suscriber>
+        </div>
+        <div class="col-lg-7 col-md-6 mb-4 mb-md-0 notification__img-container">
+          <img class="img-fluid" src="../../../../../assets/img/notifications/notifications.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 </ng-template>
 
 <footer-component></footer-component>
