--- a/client/src/app/core/shared/navbar/containers/navbar.component.scss
+++ b/client/src/app/core/shared/navbar/containers/navbar.component.scss
@@ -10,3 +10,11 @@
   width: auto;
   max-width: 50px;
 }
+
+.menu_nav--icons {
+  mat-icon {
+    font-size: 30px;
+    width: 30px;
+    height: 30px;
+  }
+}
