--- a/client/src/app/public/home/containers/home/home.component.html
+++ b/client/src/app/public/home/containers/home/home.component.html
@@ -207,7 +207,7 @@
 </ng-template>
 
 <ng-template #notifications>
-  <section class="section-padding notification__container">
+  <section id="notifications" class="section-padding notification__container">
     <div class="container">
       <div class="row">
         <div class="col-lg-5 col-md-6 align-self-center about-content">
