initial setup for settings to retrieve user data otherwise to fetch it

--- a/client/src/app/core/shared/navbar/containers/navbar.component.scss
+++ b/client/src/app/core/shared/navbar/containers/navbar.component.scss
@@ -8,7 +8,7 @@
 .logo {
   height: auto;
   width: auto;
-  max-width: 50px;
+  max-width: 100px;
 }
 
 .menu_nav--icons {
@@ -16,5 +16,11 @@
     font-size: 30px;
     width: 30px;
     height: 30px;
+  }
+}
+
+.active-link {
+  mat-icon {
+    color: #c2483d;
   }
 }
