--- a/client/src/app/core/settings/containers/settings.component.html
+++ b/client/src/app/core/settings/containers/settings.component.html
@@ -1,49 +1,98 @@
 <navbar-component></navbar-component>
 
-<form class="form-contact col-lg-6 col-xl-6 offset-xl-1" [formGroup]="settingsForm">
+<form class="form-settings form-contact col-lg-6 col-xl-6 offset-xl-1" [formGroup]="settingsForm">
     <div class="search-wrapper">
-      <div class="form-group">
-        <label for="name">Nombre</label>
-        <input type="text" class="form-control" id="name" aria-describedby="name"
-          placeholder="Introduce tu nombre de usuario" formControlName="name">
-        <!-- <small id="nameHelp" class="form-text text-muted">Opcional</small> -->
-  
-        <label for="email">Email</label>
-        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Introduce email"
-          formControlName="email">
-        <!-- <small id="emailHelp" class="form-text text-muted">No compartiremos tu email con nadie</small> -->
-  
-        <!-- <div [formGroup]="passwordForm">
-          <label for="password">Contraseña</label>
-          <input type="password" class="form-control" id="password" placeholder="Introduce la contraseña"
-            formControlName="password">
-          <details class="details">
-            <small id="passwordHelp" class="form-text text-muted">La contraseña debe contener entre 6 y 20 caracteres, de
-              los cuales 1 minúscula, 1 mayúscula, 1 número y 1 carácter especial</small>
-          </details>
-          <label for="passwordConfirmation">Repite la contraseña</label>
-          <input type="password" class="form-control" id="passwordConfirmation" placeholder="Repite la contraseña"
-            formControlName="passwordConfirmation">
-        </div> -->
-  
-        <!-- <label for="age">Edad</label>
-        <input type="number" class="form-control" id="age" aria-describedby="age" placeholder="Introduce tu edad"
-          formControlName="age">
-        <small id="ageHelp" class="form-text text-muted">Opcional</small> -->
-  
-        <!-- <label for="age">Sexo</label>
-        <div>
-          <input id="male" type="radio" value="male" name="gender" formControlName="gender">
-          <label for="male">Male</label>
-          <input id="female" type="radio" value="female" name="gender" formControlName="gender">
-          <label for="female">Female</label>
-          <small id="genderHelp" class="form-text text-muted">Opcional</small>
-        </div> -->
-      </div>
-      <div class="button-block">
-        <!-- <button type="submit" [disabled]="!isValidForm()" class="button border-1 mt-3"
-          (click)="submit()">Actualizar!</button> -->
-      </div>
+        <div class="modify-buttons">
+            <button class="button edit-button" (click)="toggleEditMode()">
+                <ng-container *ngIf="editMode; else viewMode">
+                    <span>Ver</span>
+                    <mat-icon aria-hidden="false" aria-label="Edit data">visibility</mat-icon>
+                </ng-container>
+                <ng-template #viewMode>
+                    <span>Modificar</span>
+                    <mat-icon aria-hidden="false" aria-label="Edit data">edit</mat-icon>
+                </ng-template>
+            </button>
+            <button *ngIf="editMode && settingsForm.valid" class="button edit-button" (click)="saveChanges()">
+                <span>Guardar</span>
+                <mat-icon aria-hidden="false" aria-label="Edit data">save</mat-icon>
+          </button>
+        </div>
+        <div class="scrollable-area">
+          <div class="form-group">
+            <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
+              <mat-label>Nombre</mat-label>
+              <input type="text" matInput formControlName="name" placeholder="Introduce tu nombre de usuario">
+              <mat-error *ngIf="settingsForm.get('name').hasError('required')">
+                El campo Nombre es <strong>requerido</strong>
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="form-group">
+            <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
+              <mat-label>Email</mat-label>
+              <input type="email" matInput formControlName="email" placeholder="Introduce email">
+              <mat-error *ngIf="settingsForm.get('email').hasError('email') && !settingsForm.get('email').hasError('required')">
+                El formato de email no es válido
+              </mat-error>
+              <mat-error *ngIf="settingsForm.get('email').hasError('required')">
+                El campo Email es <strong>requerido</strong>
+              </mat-error>
+            </mat-form-field>
+          </div>
+            
+          <div class="form-group" [formGroup]="passwordForm">
+            <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
+              <mat-label>Contraseña actual</mat-label>
+              <input type="password" matInput formControlName="password" placeholder="*******">
+              <mat-icon *ngIf="settingsForm.enabled" (click)="enableChangePassword()" class="button-in-input" matSuffix matTooltip="Quiero cambiar la contraseña">mode_edit</mat-icon>
+              <mat-error *ngIf="passwordForm.get('password').hasError('required')" class="mat-error--with-details">
+                El campo Contraseña es <strong>requerido</strong>
+              </mat-error>
+              <mat-error *ngIf="!passwordForm.get('password').hasError('required') && passwordForm.get('password').hasError('forbiddenPassword')" class="mat-error--with-details">
+                El campo Contraseña <strong>no cumple los requisitos</strong>. Puede ver estos requisitos en el desplegable de detalles.
+              </mat-error>
+            </mat-form-field>
+            <details class="details">
+              <small id="passwordHelp" class="form-text text-muted">La contraseña debe contener entre 6 y 20 caracteres, de
+                los cuales 1 minúscula, 1 mayúscula, 1 número y 1 carácter especial</small>
+            </details>
+
+            <mat-form-field *ngIf="showPasswordChange" class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
+              <mat-label>Introduce la nueva contraseña</mat-label>
+              <input type="password" matInput formControlName="newPassword" placeholder="*******">  
+              <mat-error *ngIf="passwordForm.get('newPassword').hasError('required')">
+                El campo Cambio de contraseña es <strong>requerido</strong> si ha activado el cambio, si no desea el cambio de contraseña desactive esta opción
+              </mat-error>
+              <mat-error *ngIf="passwordForm.get('newPassword').hasError('forbiddenPassword')">
+                El campo Contraseña <strong>no cumple los requisitos</strong>. Puede ver estos requisitos en el desplegable de detalles.
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div *ngIf="settingsForm.enabled" class="extra-fields-explanation">
+            <h4>Otros datos</h4>
+            <small><a href="javascript:void(0)" (click)="openExtraDataExp()" class="nav-link" role="button" aria-haspopup="true"
+              aria-expanded="false">Quiero saber por que se necesitan estos datos extra para hacer una maleta.</a></small>
+          </div>
+
+          <div class="form-group">
+            <mat-form-field class="full-width" [appearance]="settingsForm.enabled ? 'fill' : 'outline'">
+              <mat-label>Edad</mat-label>
+              <input type="number" matInput formControlName="age" placeholder="Introduce tu edad">
+              <mat-hint>Opcional</mat-hint>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group" [ngClass]="{'form-group--enabled': settingsForm.enabled}">
+            <mat-label class="gender-label">Sexo</mat-label>
+            <mat-radio-group formControlName="gender" class="radio-group" aria-label="Gender">
+              <mat-radio-button value="true">Hombre</mat-radio-button>
+              <mat-radio-button value="false">Mujer</mat-radio-button>
+            </mat-radio-group>
+            <small class="small-hint">Opcional</small>
+          </div>
+        </div>      
     </div>
 </form>
 <img class="settings-img" alt="login image" src="../../../../assets/img/settings/settings.PNG">
