--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -18,6 +18,9 @@ $secondary-color: #BA6C65;
 $tertiary-color: #394359;
 $link-color-secondary: #007bff;
 
+$error-color: #c2483d;
+$success-color: #2d6339;
+
 
 $black: #242429;
 $link-color: #777777;
