--- a/client/src/app/core/shared/navbar/containers/navbar.component.html
+++ b/client/src/app/core/shared/navbar/containers/navbar.component.html
@@ -14,7 +14,7 @@
             <li *ngIf="(loginService.logged$ | async) && (loginService.logged$ | async).admin!"  matTooltip="Administración area" class="nav-item active" [routerLink]="['/admin']"><a class="nav-link">Administración</a></li>
             <li *ngIf="loginService.isLoggedIn()" matTooltip="Echa un vistazo a tus maletas ya creadas" class="nav-item active" [routerLink]="['/home']" [queryParams]="{}" [fragment]="loginService.isLoggedIn() ? 'mySuitcases' : ''"><a class="nav-link">Mis Maletas</a></li>
             <li class="nav-item active"><a matTooltip="Informanos de cualquier incidente o sugerencia" class="nav-link" [routerLink]="['/contact']">Contacto</a></li>
-            <li *ngIf="loginService.isLoggedIn()" class="nav-item active"><a matTooltip="Administra tu perfil y otras configuraciones" class="nav-link" [routerLink]="['/settings']">Settings</a></li>
+            <li *ngIf="loginService.isLoggedIn()" class="nav-item active"><a matTooltip="Administra tu perfil y otras configuraciones" class="nav-link" [routerLink]="['/settings']">Perfil</a></li>
             <li class="nav-item active"><a matTooltip="Suscribete para estar al dia de todas las notificaciones" class="nav-link" [routerLink]="['/home']" [queryParams]="{}" [fragment]="'notifications'">Suscribete</a></li>
             <li *ngIf="loginService.isLoggedIn()" matTooltip="Abandona la sesión" class="nav-item active" (click)="logout()"><a class="nav-link">Salir</a></li>
           </ul>
