--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -18,6 +18,7 @@
 @import "./scss/footer";
 @import "./scss/dialogs";
 @import "./scss/icons";
+@import "./scss/snackbar";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
