--- a/client/src/app/public/home/containers/overview/overview.component.scss
+++ b/client/src/app/public/home/containers/overview/overview.component.scss
@@ -52,6 +52,15 @@
       }
     }
 
+    .overview-date, .overview-place, .overview-categories {
+      display: flex;
+
+      span {
+        line-height: 24px;
+        margin-left: 5px;
+      }
+    }
+
     .overview-actions {
       position: absolute;
       top: 15px;
