--- a/client/src/app/core/shared/navbar/containers/navbar.component.html
+++ b/client/src/app/core/shared/navbar/containers/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="main_menu">
     <nav class="navbar navbar-expand-lg ">
       <div class="container box_1620">
-        <a class="navbar-brand"  [routerLink]="['/']"><img class ="logo" src="assets/img/logo/logo.png" alt=""></a>
+        <a class="navbar-brand" (click)="goHome()"><img class ="logo" src="assets/img/logo/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
