--- a/client/src/app/core/settings/containers/settings.component.html
+++ b/client/src/app/core/settings/containers/settings.component.html
@@ -73,7 +73,7 @@
           <div *ngIf="settingsForm.enabled" class="extra-fields-explanation">
             <h4>Otros datos</h4>
             <small><a href="javascript:void(0)" (click)="openExtraDataExp()" class="nav-link" role="button" aria-haspopup="true"
-              aria-expanded="false">Quiero saber por que se necesitan estos datos extra para hacer una maleta.</a></small>
+              aria-expanded="false">Quiero saber por qué se necesitan estos datos extra para hacer una maleta.</a></small>
           </div>
 
           <div class="form-group">
