--- a/client/src/app/core/login/containers/login.component.scss
+++ b/client/src/app/core/login/containers/login.component.scss
@@ -14,4 +14,19 @@
 
 .form-check {
   margin: 20px;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  align-items: center;
+
+  * {
+    margin: 0;
+  }
+
+  .form-check-input {
+    margin-right: 7px;
+    position: relative;
+  }
+
+
 }
